--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "date-fns": "^3.3.1",
     "lucide-react": "^0.312.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "next-auth": "^4.24.5"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
