Update rate limit defaults and .env.example guidance
Increased default RATE_LIMIT_REQUESTS to 18 and RATE_LIMIT_BURST to 8 in config.go. Updated .env.example to reflect new defaults and added clearer ALLOWED_ORIGINS examples for development and production environments.

--- a/.env.example
+++ b/.env.example
@@ -38,9 +38,12 @@ PORT=8080
 LOG_LEVEL=info
 
 # Security Configuration (Optional - comma-separated list)
-# ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080,https://your-domain.com
+# For development:
+# ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
+# For production (Railway):
+# ALLOWED_ORIGINS=https://arcdb.up.railway.app,https://your-frontend-domain.com
 
 # Rate Limiting (Optional - defaults shown)
-# RATE_LIMIT_REQUESTS=15
+# RATE_LIMIT_REQUESTS=18
 # RATE_LIMIT_WINDOW_SECONDS=60
-# RATE_LIMIT_BURST=5
+# RATE_LIMIT_BURST=8
