--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "lucide-react": "^0.312.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0",
-    "next-auth": "^4.24.5"
+    "next-auth": "^4.24.5",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
